# models/models.go
@@ -4,7 +4,6 @@ import (
 	"time"
 
 	"github.com/shopspring/decimal"
-	"gorm.io/gorm"
 )
 
 type ProductResponse struct {
@@ -34,36 +33,43 @@ type Product struct {
 }
 
 type Category struct {
-	ID        uint `gorm:"primaryKey"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt *time.Time
-	Name      string `gorm:"size:255;uniqueIndex" json:"name"`
+	ID        uint       `json:"id" gorm:"primaryKey"`
+	CreatedAt time.Time  `json:"createdAt"`
+	UpdatedAt time.Time  `json:"updatedAt"`
+	DeletedAt *time.Time `json:"deleteAt,omitempty"`
+	Name      string     `json:"name" gorm:"size:255;uniqueIndex"`
 }
 
 type User struct {
-	gorm.Model
-	Name     string `json:"name"`
-	Email    string `json:"email" gorm:"unique"`
-	Password string `json:"password"`
-	Role     string `json:"role"` // "customer" or "admin"
+	ID        uint       `json:"id" gorm:"primaryKey;unique"`
+	CreatedAt time.Time  `json:"createdAt"`
+	UpdatedAt time.Time  `json:"updatedAt"`
+	DeletedAt *time.Time `json:"deleteAt,omitempty"`
+	Name      string     `json:"name"`
+	Email     string     `json:"email" gorm:"unique"`
+	Password  string     `json:"password"`
+	Role      string     `json:"role"` // "customer" or "admin"
 }
 
 type Order struct {
-	gorm.Model
-	UserID     uint        `json:"user_id"`
-	User       User        `json:"user" gorm:"foreignKey:UserID"`
+	ID        uint       `json:"id" gorm:"primaryKey;unique"`
+	CreatedAt time.Time  `json:"createdAt"`
+	UpdatedAt time.Time  `json:"updatedAt"`
+	DeletedAt *time.Time `json:"deleteAt,omitempty"`
+	// UserID     uint        `json:"user_id"`
+	// User       User        `json:"user" gorm:"foreignKey:UserID"`
 	Total      float64     `json:"total"`
 	Status     string      `json:"status"` // pending, paid, shipped, completed, canceled
-	OrderItems []OrderItem `json:"order_items"`
+	OrderItems []OrderItem `json:"order_items" gorm:"foreignKey:OrderID"`
 }
 
 type OrderItem struct {
-	gorm.Model
+	ID        uint            `json:"id" gorm:"primaryKey;unique"`
+	CreatedAt time.Time       `json:"createdAt"`
+	UpdatedAt time.Time       `json:"updatedAt"`
+	DeletedAt *time.Time      `json:"deleteAt,omitempty"`
 	OrderID   uint            `json:"order_id"`
-	Order     Order           `json:"order" gorm:"foreignKey:OrderID"`
-	ProductId uint            `json:"product_id"`
-	Product   Product         `json:"product"`
+	ProductID uint            `json:"product_id"`
 	Quantity  int             `json:"quantity"`
 	Price     decimal.Decimal `json:"price" gorm:"type:decimal(10,2)"`
 }
